--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,19 +18,26 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        main:
-            pattern: ^/
-            form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
-            logout:       true
-            anonymous:    true
+        #main:
+            #pattern: ^/
+            #form_login:
+            #    provider: fos_userbundle
+            #    csrf_token_generator: security.csrf.token_manager
+            #logout:       true
+            #anonymous:    true
+        bauth:
+          pattern: ^/
+          http_basic: ~
+          stateless: true
+          provider: fos_userbundle
 
     access_control:
       - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
       - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
       - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-      - { path: ^/admin/, role: ROLE_ADMIN }
+
+      - { path: ^/secret/basic_auth, role: ROLE_ADMIN }
+
 
               # activate different ways to authenticate
 
