--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gulp-util": "^3.0.8",
     "gulp-wrapper": "^1.0.0",
     "jshint": "^2.9.4"
+  },
+  "dependencies": {
+    "bootstrap-sass": "^3.3.7"
   }
 }
