--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,13 +59,21 @@ doctrine:
 
 fos_user:
     db_driver: orm
-    firewall_name: main
+    firewall_name: oauth_authorize
     user_class: AppBundle\Entity\User
     from_email:
       address: "%mailer_user%"
       sender_name: "%mailer_user%"
 
-# Swiftmailer Configuration
+fos_oauth_server:
+    db_driver: orm
+    client_class:        AppBundle\Entity\OAuth\Client
+    access_token_class:  AppBundle\Entity\OAuth\AccessToken
+    refresh_token_class: AppBundle\Entity\OAuth\RefreshToken
+    auth_code_class:     AppBundle\Entity\OAuth\AuthCode
+    service:
+      user_provider: fos_user.user_provider.username
+
 swiftmailer:
     transport: '%mailer_transport%'
     host: '%mailer_host%'
