--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,6 +75,16 @@ fos_oauth_server:
     service:
       user_provider: fos_user.user_provider.username
 
+lexik_jwt_authentication:
+    private_key_path: '%kernel.root_dir%/../var/jwt/private.pem'
+    public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'
+    pass_phrase:      ~
+    token_ttl:        300 # 5 minutes
+    token_extractors:
+      query_parameter:
+        enabled: true
+        name: bearer
+
 swiftmailer:
     transport: '%mailer_transport%'
     host: '%mailer_host%'
