--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,3 +11,6 @@ fos_oauth_server_token:
 
 fos_oauth_server_authorize:
     resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
+
+jwt_login_check:
+    path: /jwt/login_check
