--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,6 +30,20 @@ security:
           http_basic: ~
           stateless: true
           provider: fos_userbundle
+
+        oauth:
+          pattern:    ^/secret/oauth
+          fos_oauth:  true
+          stateless:  true
+          anonymous:  false
+
+        jwt:
+          pattern: ^/secret/jwt
+          stateless: true
+          provider: fos_userbundle
+          guard:
+            authenticators:
+              - lexik_jwt_authentication.jwt_token_authenticator
 # ----
         oauth_token:
           pattern:    ^/oauth/v2/token
@@ -42,27 +56,23 @@ security:
             check_path: /oauth/v2/auth/login_check
             login_path: /oauth/v2/auth/login
           anonymous: true
-
-        oauth:
-          pattern:    ^/secret/oauth
-          fos_oauth:  true
-          stateless:  true
-          anonymous:  false
 # -----
+        jwt_login:
+          pattern: ^/jwt/login
+          stateless: true
+          anonymous: true
+          form_login:
+            check_path: /jwt/login_check
+            success_handler:          lexik_jwt_authentication.handler.authentication_success
+            failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+            require_previous_session: false
 
     access_control:
       - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
       - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
       - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+      - { path: ^/jwt/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
       - { path: ^/secret/basic_auth, role: ROLE_ADMIN }
       - { path: ^/secret/oauth, role: IS_AUTHENTICATED_FULLY }
-
-
-              # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+      - { path: ^/secret/jwt, role: IS_AUTHENTICATED_FULLY }
